--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <link rel="manifest" href="manifest.json">
     <title>FuelMaster - Калькулятор расхода топлива</title>
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-          integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-          crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -20,16 +18,14 @@
                 <h1 class="brand-title">FuelMaster</h1>
                 <div class="header-utils">
                     <div class="weather-info">
-                        <i class="fas fa-cloud"></i> <span id="weather-text">11°C, Курск</span> <i class="fas fa-arrow-down"></i> <span id="weather-pressure">760 мм</span>
+                        <i class="fas fa-cloud"></i> 11°C, Курск <i class="fas fa-arrow-down"></i> 760 мм
                     </div>
-
-                    <select id="language-toggle" aria-label="Выбор языка">
+                    <select id="language-toggle">
                         <option value="ru">RU</option>
                         <option value="en">EN</option>
                     </select>
-
                     <button id="theme-toggle" aria-label="Переключить тему">
-                        <span id="theme-text" data-i18n="theme-light">Светлая</span>
+                        <span id="theme-text">Светлая</span>
                     </button>
                 </div>
             </div>
@@ -40,51 +36,54 @@
         <div class="parallax-bg"></div>
         <div class="particles"></div>
         <div class="container">
-            <h1 id="hero-title" data-i18n="hero-title">Управляй расходом топлива с умом</h1>
-            <p id="hero-subtitle" data-i18n="hero-subtitle">FuelMaster — комплексное приложение для отслеживания автомобилей, расчета топлива и полезных советов.</p>
-            <a href="#download" class="btn primary"><i class="fas fa-download animated-icon"></i> <span id="download-text" data-i18n="download-text">Скачать</span></a>
-            <div class="seasonal-banner" id="seasonal-banner" data-i18n="seasonal-banner">Осенние обновления 2025: Улучшенный расчёт и новые советы по экономии до 30 сентября! <span id="countdown"></span></div>
+            <h1 id="hero-title">Управляй расходом топлива с умом</h1>
+            <p id="hero-subtitle">FuelMaster — комплексное приложение для отслеживания автомобилей, расчета топлива и полезных советов.</p>
+            <a href="#download" class="btn primary"><i class="fas fa-download animated-icon"></i> <span id="download-text">Скачать</span></a>
+            <div class="seasonal-banner" id="seasonal-banner">
+                Осенние обновления 2025: Улучшенный расчет и новые советы по экономии до 30 сентября!
+                <span id="countdown"></span>
+            </div>
         </div>
     </section>
 
     <section id="calculator">
         <div class="container">
-            <h2 id="calculator-title" data-i18n="calculator-title">Рассчитайте расход топлива</h2>
+            <h2 id="calculator-title">Рассчитайте расход топлива</h2>
             <div class="calculator-form">
-                <input type="number" id="start-mileage" data-i18n="start-mileage" placeholder="Начальный пробег (км)" min="0">
-                <input type="number" id="end-mileage" data-i18n="end-mileage" placeholder="Конечный пробег (км)" min="0">
-                <input type="number" id="start-fuel" data-i18n="start-fuel" placeholder="Топливо в баке на начало (л)" min="0">
-                <input type="number" id="highway-km" data-i18n="highway-km" placeholder="Км по трассе" min="0">
-                <button id="calculate-btn" data-i18n="calculate-btn">Рассчитать</button>
-                <p id="total-mileage" data-i18n="total-mileage" data-km="0"></p>
-                <p id="result" data-i18n="fuel-result" data-consumption="0" data-highway="0" data-city="0"></p>
+                <input type="number" id="start-mileage" placeholder="Начальный пробег (км)" min="0">
+                <input type="number" id="end-mileage" placeholder="Конечный пробег (км)" min="0">
+                <input type="number" id="start-fuel" placeholder="Топливо в баке на начало (л)" min="0">
+                <input type="number" id="highway-km" placeholder="Км по трассе" min="0">
+                <button id="calculate-btn">Рассчитать</button>
+                <p id="total-mileage"></p>
+                <p id="result"></p>
             </div>
         </div>
     </section>
 
     <section id="features">
         <div class="container">
-            <h2 id="features-title" data-i18n="features-title">Основные возможности</h2>
+            <h2 id="features-title">Основные возможности</h2>
             <div class="feature-grid">
                 <div class="feature-card">
                     <i class="fas fa-car animated-icon"></i>
-                    <h3 id="feature1-title" data-i18n="feature1-title">Управление авто</h3>
-                    <p id="feature1-desc" data-i18n="feature1-desc">Добавление, редактирование, удаление автомобилей с базой моделей из CSV.</p>
+                    <h3 id="feature1-title">Управление авто</h3>
+                    <p id="feature1-desc">Добавление, редактирование, удаление автомобилей с базой моделей из CSV.</p>
                 </div>
                 <div class="feature-card">
                     <i class="fas fa-gas-pump animated-icon"></i>
-                    <h3 id="feature2-title" data-i18n="feature2-title">Расчет расхода</h3>
-                    <p id="feature2-desc" data-i18n="feature2-desc">Учет города/трассы, погоды, кондиционера и других факторов.</p>
+                    <h3 id="feature2-title">Расчет расхода</h3>
+                    <p id="feature2-desc">Учет города/трассы, погоды, кондиционера и других факторов.</p>
                 </div>
                 <div class="feature-card">
                     <i class="fas fa-chart-line animated-icon"></i>
-                    <h3 id="feature3-title" data-i18n="feature3-title">История и графики</h3>
-                    <p id="feature3-desc" data-i18n="feature3-desc">Хранение, фильтры и визуализация с fl_chart.</p>
+                    <h3 id="feature3-title">История и графики</h3>
+                    <p id="feature3-desc">Хранение, фильтры и визуализация с fl_chart.</p>
                 </div>
                 <div class="feature-card">
                     <i class="fas fa-lock animated-icon"></i>
-                    <h3 id="feature4-title" data-i18n="feature4-title">Безопасность и премиум</h3>
-                    <p id="feature4-desc" data-i18n="feature4-desc">Firebase вход, синхронизация с Firestore для премиум.</p>
+                    <h3 id="feature4-title">Безопасность и премиум</h3>
+                    <p id="feature4-desc">Firebase вход, синхронизация с Firestore для премиум.</p>
                 </div>
             </div>
         </div>
@@ -92,36 +91,25 @@
 
     <section id="screenshots">
         <div class="container">
-            <h2 id="screenshots-title" data-i18n="screenshots-title">Скриншоты</h2>
+            <h2 id="screenshots-title">Скриншоты</h2>
             <div class="gallery" id="screenshot-gallery">
-                <img src="assets/img/Screenshot-1-dark.jpg" alt="Скриншот 1" loading="lazy" data-light="assets/img/Screenshot-1-light.jpg" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-2-dark.jpg" alt="Скриншот 2" loading="lazy" data-light="assets/img/Screenshot-2-light.jpg" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-3-dark.jpg" alt="Скриншот 3" loading="lazy" data-light="assets/img/Screenshot-3-light.jpg" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-4-dark.jpg" alt="Скриншот 4" loading="lazy" data-light="assets/img/Screenshot-4-light.jpg" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-5-dark.jpg" alt="Скриншот 5" loading="lazy" data-light="assets/img/Screenshot-5-light.jpg" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-6-dark.jpg" alt="Скриншот 6" loading="lazy" data-light="assets/img/Screenshot-6-light.jpg" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-7-dark.jpg" alt="Скриншот 7" loading="lazy" data-light="assets/img/Screenshot-7-light.jpg" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-8-dark.jpg" alt="Скриншот 8" loading="lazy" data-light="assets/img/Screenshot-8-light.jpg" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-9-dark.jpg" alt="Скриншот 9" loading="lazy" data-light="assets/img/Screenshot-9-light.jpg" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-10-dark.jpg" alt="Скриншот 10" loading="lazy" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-11-dark.jpg" alt="Скриншот 11" loading="lazy" ondblclick="openModal(this)">
-                <img src="assets/img/Screenshot-12-dark.jpg" alt="Скриншот 12" loading="lazy" ondblclick="openModal(this)">
+                <!-- Скриншоты -->
             </div>
         </div>
     </section>
 
     <section id="testimonials">
         <div class="container">
-            <h2 id="testimonials-title" data-i18n="testimonials-title">Отзывы пользователей</h2>
+            <h2 id="testimonials-title">Отзывы пользователей</h2>
             <div class="testimonial-grid">
                 <div class="testimonial-card">
-                    <p id="testimonial1-text" data-i18n="testimonial1-text">"Отлично помогает экономить топливо!"</p>
-                    <span id="testimonial1-author" data-i18n="testimonial1-author">— Иван, Москва</span>
+                    <p id="testimonial1-text">"Отлично помогает экономить топливо!"</p>
+                    <span id="testimonial1-author">— Иван, Москва</span>
                     <div class="stars">★★★★★</div>
                 </div>
                 <div class="testimonial-card">
-                    <p id="testimonial2-text" data-i18n="testimonial2-text">"Простое и удобное приложение!"</p>
-                    <span id="testimonial2-author" data-i18n="testimonial2-author">— Ольга, Санкт-Петербург</span>
+                    <p id="testimonial2-text">"Простое и удобное приложение!"</p>
+                    <span id="testimonial2-author">— Ольга, Санкт-Петербург</span>
                     <div class="stars">★★★★☆</div>
                 </div>
             </div>
@@ -130,13 +118,13 @@
 
     <section id="download">
         <div class="container">
-            <h2 id="download-title" data-i18n="download-title">Скачай FuelMaster</h2>
-            <p id="download-desc" data-i18n="download-desc">Доступно для Android и iOS. Установи прямо сейчас!</p>
-            <a href="https://github.com/maksimyugov89/FuelMaster" class="btn secondary">
-                <img src="assets/img/logo.PNG" alt="Logo" class="download-logo"> <span data-i18n="download-github">Исходный код</span>
+            <h2 id="download-title">Скачай FuelMaster</h2>
+            <p id="download-desc">Доступно для Android и iOS. Установи прямо сейчас!</p>
+            <a href="https://github.com/maksimyugov89/FuelMaster" class="btn secondary" id="source-code-btn">
+                <img src="assets/img/logo.PNG" alt="Logo" class="download-logo"> <span id="source-code-text">Исходный код</span>
             </a>
-            <a href="#" class="btn primary">
-                <img src="assets/img/logo.PNG" alt="Logo" class="download-logo"> <span data-i18n="download-apk">Скачать APK</span>
+            <a href="#" class="btn primary" id="apk-btn">
+                <img src="assets/img/logo.PNG" alt="Logo" class="download-logo"> <span id="apk-text">Скачать APK</span>
             </a>
         </div>
     </section>
@@ -148,7 +136,7 @@
         </div>
     </footer>
 
-    <div id="modal" class="modal" role="dialog" aria-hidden="true">
+    <div id="modal" class="modal">
         <span class="close-modal" onclick="closeModal()">&times;</span>
         <img id="modal-img" src="" alt="Увеличенное изображение">
         <p id="modal-caption"></p>
