--- a/index.html
+++ b/index.html
@@ -119,8 +119,12 @@
         <div class="container">
             <h2 id="download-title" data-i18n="download-title">Скачай FuelMaster</h2>
             <p id="download-desc" data-i18n="download-desc">Доступно для Android и iOS. Установи прямо сейчас!</p>
-            <a href="https://github.com/maksimyugov89/FuelMaster" class="btn secondary" data-i18n="download-github">Исходный код</a>
-            <a href="#" class="btn primary" data-i18n="download-apk">Скачать APK</a>
+            <a href="https://github.com/maksimyugov89/FuelMaster" class="btn secondary" data-i18n="download-github">
+                <img src="assets/img/logo.PNG" alt="Logo" class="download-logo"> Исходный код
+            </a>
+            <a href="#" class="btn primary" data-i18n="download-apk">
+                <img src="assets/img/logo.PNG" alt="Logo" class="download-logo"> Скачать APK
+            </a>
         </div>
     </section>
 
