--- a/index.html
+++ b/index.html
@@ -116,16 +116,18 @@
     </section>
 
     <section id="download">
-        <div class="container">
-            <h2 id="download-title" data-i18n="download-title">Скачай FuelMaster</h2>
-            <p id="download-desc" data-i18n="download-desc">Доступно для Android и iOS. Установи прямо сейчас!</p>
-            <a href="https://github.com/maksimyugov89/FuelMaster" class="btn secondary" data-i18n="download-github">
-                <img src="assets/img/logo.PNG" alt="Logo" class="download-logo"> Исходный код
-            </a>
-            <a href="#" class="btn primary" data-i18n="download-apk">
-                <img src="assets/img/logo.PNG" alt="Logo" class="download-logo"> Скачать APK
-            </a>
-        </div>
+    <div class="container">
+        <h2 id="download-title" data-i18n="download-title">Скачай FuelMaster</h2>
+        <p id="download-desc" data-i18n="download-desc">Доступно для Android и iOS. Установи прямо сейчас!</p>
+        <a href="https://github.com/maksimyugov89/FuelMaster" class="btn secondary" data-i18n="download-github">
+            <img src="assets/img/logo.PNG" alt="Logo" class="download-logo"> 
+            <span id="source-code-text" data-i18n="download-github">Исходный код</span>
+        </a>
+        <a href="#" class="btn primary" data-i18n="download-apk">
+            <img src="assets/img/logo.PNG" alt="Logo" class="download-logo"> 
+            <span id="apk-text" data-i18n="download-apk">Скачать APK</span>
+        </a>
+    </div>
     </section>
 
     <footer>
